actually omit password from json marshalling

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,4 +9,4 @@ sql:
         out: "internal/database"
         overrides:
           - column: users.hashed_password
-            go_struct_tag: json:"~"
+            go_struct_tag: 'json:"-"'
